kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api 
spec:
  revisionHistoryLimit: 5
  replicas: 1
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
      - name: app
        image: i0nw/user-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
